[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/btree/script/btree.gd" type="Script" id=1]
[ext_resource path="res://test_folder/test btree/_BaseAIBTree.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 1000.0

[sub_resource type="CircleShape2D" id=2]
radius = 350.0

[node name="AI" type="Node2D"]
script = ExtResource( 2 )

[node name="BTREE" type="Node" parent="."]
script = ExtResource( 1 )
tree = {
"connection": [ {
"from": "root",
"from_port": 0,
"to": "sequence",
"to_port": 0
}, {
"from": "sequence",
"from_port": 0,
"to": "task3",
"to_port": 0
}, {
"from": "sequence",
"from_port": 1,
"to": "task5",
"to_port": 0
}, {
"from": "sequence",
"from_port": 2,
"to": "sequence2",
"to_port": 0
}, {
"from": "sequence2",
"from_port": 0,
"to": "task2",
"to_port": 0
}, {
"from": "sequence2",
"from_port": 2,
"to": "task",
"to_port": 0
}, {
"from": "sequence2",
"from_port": 1,
"to": "task4",
"to_port": 0
} ],
"nodes": [ {
"child": [ {
"child": [ {
"child": [  ],
"data": {
"fn": "task_idle",
"offset": Vector2( 300, -300 ),
"params": [  ],
"size": Vector2( 220, 85 ),
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_enemy_detected",
"offset": Vector2( 300, -200 ),
"params": [  ],
"size": Vector2( 281, 91 ),
"values": [  ]
},
"name": "task5",
"type": 1
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_seek_enemy",
"offset": Vector2( 480, -90 ),
"params": [  ],
"size": Vector2( 260, 85 ),
"values": [  ]
},
"name": "task2",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_enemy_is_close",
"offset": Vector2( 480, 20 ),
"params": [  ],
"size": Vector2( 275, 85 ),
"values": [  ]
},
"name": "task4",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_idle",
"offset": Vector2( 480, 130 ),
"params": [  ],
"size": Vector2( 263, 85 ),
"values": [  ]
},
"name": "task",
"type": 1
} ],
"data": {
"count": 3,
"offset": Vector2( 300, -90 ),
"size": Vector2( 125, 133 )
},
"name": "sequence2",
"type": 2
} ],
"data": {
"count": 3,
"offset": Vector2( 140, -130 ),
"size": Vector2( 119, 112 )
},
"name": "sequence",
"type": 2
} ],
"data": {
"offset": Vector2( 0, 0 ),
"size": Vector2( 96, 82.0006 )
},
"name": "root",
"type": 0
}, {
"child": [  ],
"data": {
"fn": "task_idle",
"offset": Vector2( 300, -300 ),
"params": [  ],
"size": Vector2( 220, 85 ),
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_idle",
"offset": Vector2( 300, -300 ),
"params": [  ],
"size": Vector2( 220, 85 ),
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_enemy_detected",
"offset": Vector2( 300, -200 ),
"params": [  ],
"size": Vector2( 281, 91 ),
"values": [  ]
},
"name": "task5",
"type": 1
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_seek_enemy",
"offset": Vector2( 480, -90 ),
"params": [  ],
"size": Vector2( 260, 85 ),
"values": [  ]
},
"name": "task2",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_enemy_is_close",
"offset": Vector2( 480, 20 ),
"params": [  ],
"size": Vector2( 275, 85 ),
"values": [  ]
},
"name": "task4",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_idle",
"offset": Vector2( 480, 130 ),
"params": [  ],
"size": Vector2( 263, 85 ),
"values": [  ]
},
"name": "task",
"type": 1
} ],
"data": {
"count": 3,
"offset": Vector2( 300, -90 ),
"size": Vector2( 125, 133 )
},
"name": "sequence2",
"type": 2
} ],
"data": {
"count": 3,
"offset": Vector2( 140, -130 ),
"size": Vector2( 119, 112 )
},
"name": "sequence",
"type": 2
}, {
"child": [  ],
"data": {
"fn": "task_enemy_detected",
"offset": Vector2( 300, -200 ),
"params": [  ],
"size": Vector2( 281, 91 ),
"values": [  ]
},
"name": "task5",
"type": 1
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_seek_enemy",
"offset": Vector2( 480, -90 ),
"params": [  ],
"size": Vector2( 260, 85 ),
"values": [  ]
},
"name": "task2",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_enemy_is_close",
"offset": Vector2( 480, 20 ),
"params": [  ],
"size": Vector2( 275, 85 ),
"values": [  ]
},
"name": "task4",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_idle",
"offset": Vector2( 480, 130 ),
"params": [  ],
"size": Vector2( 263, 85 ),
"values": [  ]
},
"name": "task",
"type": 1
} ],
"data": {
"count": 3,
"offset": Vector2( 300, -90 ),
"size": Vector2( 125, 133 )
},
"name": "sequence2",
"type": 2
}, {
"child": [  ],
"data": {
"fn": "task_seek_enemy",
"offset": Vector2( 480, -90 ),
"params": [  ],
"size": Vector2( 260, 85 ),
"values": [  ]
},
"name": "task2",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_enemy_is_close",
"offset": Vector2( 480, 20 ),
"params": [  ],
"size": Vector2( 275, 85 ),
"values": [  ]
},
"name": "task4",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_idle",
"offset": Vector2( 480, 130 ),
"params": [  ],
"size": Vector2( 263, 85 ),
"values": [  ]
},
"name": "task",
"type": 1
} ],
"root": {
"child": [ {
"child": [ {
"child": [  ],
"data": {
"fn": "task_idle",
"offset": Vector2( 300, -300 ),
"params": [  ],
"size": Vector2( 220, 85 ),
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_enemy_detected",
"offset": Vector2( 300, -200 ),
"params": [  ],
"size": Vector2( 281, 91 ),
"values": [  ]
},
"name": "task5",
"type": 1
}, {
"child": [ {
"child": [  ],
"data": {
"fn": "task_seek_enemy",
"offset": Vector2( 480, -90 ),
"params": [  ],
"size": Vector2( 260, 85 ),
"values": [  ]
},
"name": "task2",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_enemy_is_close",
"offset": Vector2( 480, 20 ),
"params": [  ],
"size": Vector2( 275, 85 ),
"values": [  ]
},
"name": "task4",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_idle",
"offset": Vector2( 480, 130 ),
"params": [  ],
"size": Vector2( 263, 85 ),
"values": [  ]
},
"name": "task",
"type": 1
} ],
"data": {
"count": 3,
"offset": Vector2( 300, -90 ),
"size": Vector2( 125, 133 )
},
"name": "sequence2",
"type": 2
} ],
"data": {
"count": 3,
"offset": Vector2( 140, -130 ),
"size": Vector2( 119, 112 )
},
"name": "sequence",
"type": 2
} ],
"data": {
"offset": Vector2( 0, 0 ),
"size": Vector2( 96, 82.0006 )
},
"name": "root",
"type": 0
}
}

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 1 )

[node name="TargetRay" type="RayCast2D" parent="."]
cast_to = Vector2( 1000, 0 )

[node name="VelocityRay" type="RayCast2D" parent="."]
cast_to = Vector2( 1, 0 )

[node name="FleeRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FleeRange"]
shape = SubResource( 2 )
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_body_exited"]
